// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/skeleton SkeletonAvatar should render shallow component ok 1`] = `
<div
  className="ui-skeleton-shape ui-skeleton-shape--circle e1krcyn16 css-0"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
/>
`;

exports[`components/skeleton SkeletonButton should render shallow component ok 1`] = `
<div
  className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-0"
  style={
    Object {
      "height": 36,
      "width": 36,
    }
  }
/>
`;

exports[`components/skeleton SkeletonGrid should render shallow component ok 1`] = `
<div
  className="e1krcyn10 css-1yw3gw6"
  style={Object {}}
>
  <div
    className="e1krcyn10 css-xpg5aq"
    style={Object {}}
  >
    <div
      className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 e1krcyn16 css-10hree7"
      onClick={undefined}
      style={Object {}}
    >
      <div
        className="e1krcyn10 css-1une52z"
        style={Object {}}
      >
        <div
          className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-1k5qjm9"
          size={14}
          style={
            Object {
              "height": 24,
              "width": "50%",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    className="e1krcyn10 css-xpg5aq"
    style={Object {}}
  >
    <div
      className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 e1krcyn16 css-10hree7"
      onClick={undefined}
      style={Object {}}
    >
      <div
        className="e1krcyn10 css-1une52z"
        style={Object {}}
      >
        <div
          className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-1k5qjm9"
          style={
            Object {
              "height": 24,
              "width": "50%",
            }
          }
        />
        <div
          className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-1k5qjm9"
          size={14}
          style={
            Object {
              "height": 12,
              "width": "50%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonGrid should render shallow component ok 2`] = `
<div>
  <div
    className="ui-skeleton-page-header e1krcyn16 css-0"
    style={Object {}}
  >
    <div
      className="ui-skeleton-page-header-heading e1krcyn16 css-0"
      style={
        Object {
          "width": 1100,
        }
      }
    >
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-0"
        style={
          Object {
            "height": 12,
            "width": "50%",
          }
        }
      />
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-0"
        style={
          Object {
            "height": 36,
            "width": 36,
          }
        }
      />
    </div>
    <div
      className="ui-skeleton-page-header-toolbar e1krcyn16 css-0"
      style={Object {}}
    >
      <div
        className="e1krcyn10 css-1lw0t84"
        style={Object {}}
      >
        <div
          className="e1krcyn10 css-yaps0e"
          style={Object {}}
        >
          <div
            className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-vu3rrr"
            style={
              Object {
                "height": 12,
                "width": "50%",
              }
            }
          />
          <div
            className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-vu3rrr"
            style={
              Object {
                "height": 12,
                "width": "50%",
              }
            }
          />
          <div
            className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-vu3rrr"
            style={
              Object {
                "height": 12,
                "width": "50%",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="e1krcyn10 css-2l1w6y"
    style={Object {}}
  >
    <div
      className="e1krcyn10 css-1ovlff0"
      style={Object {}}
    >
      <div
        className="e1krcyn10 css-38z0j0"
        style={Object {}}
      >
        <div
          className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 e1krcyn16 css-kd7fyf"
          onClick={undefined}
          style={Object {}}
        >
          <div
            className="e1krcyn10 css-rnemgu"
            style={Object {}}
          >
            <div
              className="ui-skeleton-shape ui-skeleton-shape--circle e1krcyn16 css-9lt90s"
              style={
                Object {
                  "height": 80,
                  "width": 80,
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-9lt90s"
              style={
                Object {
                  "height": 12,
                  "width": "14%",
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-9lt90s"
              style={
                Object {
                  "height": 12,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
        <div
          className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 e1krcyn16 css-kd7fyf"
          onClick={undefined}
          style={Object {}}
        >
          <div
            className="e1krcyn10 css-rnemgu"
            style={Object {}}
          >
            <div
              className="ui-skeleton-shape ui-skeleton-shape--circle e1krcyn16 css-9lt90s"
              style={
                Object {
                  "height": 80,
                  "width": 80,
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-9lt90s"
              style={
                Object {
                  "height": 12,
                  "width": "14%",
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-9lt90s"
              style={
                Object {
                  "height": 12,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
        <div
          className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 e1krcyn16 css-kd7fyf"
          onClick={undefined}
          style={Object {}}
        >
          <div
            className="e1krcyn10 css-rnemgu"
            style={Object {}}
          >
            <div
              className="ui-skeleton-shape ui-skeleton-shape--circle e1krcyn16 css-9lt90s"
              style={
                Object {
                  "height": 80,
                  "width": 80,
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-9lt90s"
              style={
                Object {
                  "height": 12,
                  "width": "14%",
                }
              }
            />
            <div
              className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-9lt90s"
              style={
                Object {
                  "height": 12,
                  "width": "20%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonList should render shallow component ok 1`] = `
<div
  className="e1krcyn10 css-1une52z"
  style={Object {}}
>
  <div
    className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 e1krcyn16 css-ubsjkn"
    onClick={undefined}
    style={Object {}}
  >
    <div
      className="e1krcyn10 css-1t4fv6k"
      style={Object {}}
    >
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-vu3rrr"
        style={
          Object {
            "height": 12,
            "width": "20%",
          }
        }
      />
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-vu3rrr"
        style={
          Object {
            "height": 12,
            "width": "10%",
          }
        }
      />
    </div>
  </div>
  <div
    className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 e1krcyn16 css-ubsjkn"
    onClick={undefined}
    style={Object {}}
  >
    <div
      className="e1krcyn10 css-1t4fv6k"
      style={Object {}}
    >
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-vu3rrr"
        style={
          Object {
            "height": 12,
            "width": "20%",
          }
        }
      />
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-vu3rrr"
        style={
          Object {
            "height": 12,
            "width": "10%",
          }
        }
      />
    </div>
  </div>
  <div
    className="ui-paper ui-paper--level-1 ui-paper--hover-level-1 e1krcyn16 css-ubsjkn"
    onClick={undefined}
    style={Object {}}
  >
    <div
      className="e1krcyn10 css-1t4fv6k"
      style={Object {}}
    >
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-vu3rrr"
        style={
          Object {
            "height": 12,
            "width": "20%",
          }
        }
      />
      <div
        className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-vu3rrr"
        style={
          Object {
            "height": 12,
            "width": "10%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonText should render shallow component ok 1`] = `
<div
  className="ui-skeleton-shape ui-skeleton-shape--square e1krcyn16 css-0"
  style={
    Object {
      "height": 12,
      "width": "50%",
    }
  }
/>
`;
